--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.2",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
+    "react-tsparticles": "^2.12.2",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
